Correcting color for the date stamp. The intended color has enough contrast.

--- a/crt_portal/static/sass/custom/complaint.scss
+++ b/crt_portal/static/sass/custom/complaint.scss
@@ -58,7 +58,7 @@ $complaint-header-min-height: 200px;
       }
 
       .date {
-        color: #aeaeab;
+        color: $gray-cool-60;
       }
     }
   }
